force-app/main/default/objects/Contact/fields/Position_Construction_and_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Position_Construction_and_Extraction__c</fullName>
    <description>Online App</description>
    <label>Position - Construction and Extraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant/Helper - All</fullName>
            </value>
            <value>
                <fullName>Boilermaker</fullName>
            </value>
            <value>
                <fullName>Brick mason &amp; Block mason</fullName>
            </value>
            <value>
                <fullName>Cement Masonry &amp; Concrete Finisher</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Building Inspector</fullName>
            </value>
            <value>
                <fullName>Derrick Operator - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Drywall Taper/Ceiling Tile Installer</fullName>
            </value>
            <value>
                <fullName>Earth Driller</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Elevator Installer &amp; Repairmen</fullName>
            </value>
            <value>
                <fullName>Explosive Worker/Expert</fullName>
            </value>
            <value>
                <fullName>Extraction Worker - All Other</fullName>
            </value>
            <value>
                <fullName>Fence Erector</fullName>
            </value>
            <value>
                <fullName>Flooring/Tile Installer</fullName>
            </value>
            <value>
                <fullName>Glazier</fullName>
            </value>
            <value>
                <fullName>Hazardous Material Removal Worker</fullName>
            </value>
            <value>
                <fullName>Helper - Extraction Worker</fullName>
            </value>
            <value>
                <fullName>Highway Maintenance Worker</fullName>
            </value>
            <value>
                <fullName>Insulation Worker</fullName>
            </value>
            <value>
                <fullName>Miner</fullName>
            </value>
            <value>
                <fullName>Operating Engineer</fullName>
            </value>
            <value>
                <fullName>Other Construction Equipment Operator</fullName>
            </value>
            <value>
                <fullName>Painter-Construction &amp; Maintenance</fullName>
            </value>
            <value>
                <fullName>Paperhanger</fullName>
            </value>
            <value>
                <fullName>Paving Surfacing &amp; Trampling Equipment Operator</fullName>
            </value>
            <value>
                <fullName>Pile - Driver Operator</fullName>
            </value>
            <value>
                <fullName>Pipe layer</fullName>
            </value>
            <value>
                <fullName>Plasterer &amp; Stucco Mason</fullName>
            </value>
            <value>
                <fullName>Plumber, Pipefitter &amp; Steamfitter</fullName>
            </value>
            <value>
                <fullName>Rail-Track Laying &amp; Maintenance Equipment Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>