force-app/main/default/objects/Contact/fields/Position_Education_Training_and_Librar__c.field-meta.xml
<CustomField>
    <fullName>Position_Education_Training_and_Librar__c</fullName>
    <description>Online App</description>
    <label>Position - Education Training and Librar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audiovisual Specialist</fullName>
            </value>
            <value>
                <fullName>Curator</fullName>
            </value>
            <value>
                <fullName>Educator, Teacher, Instructor</fullName>
            </value>
            <value>
                <fullName>Farm &amp; Home Management Advisor</fullName>
            </value>
            <value>
                <fullName>Librarian/Technician</fullName>
            </value>
            <value>
                <fullName>Museum Technician &amp; Conservator</fullName>
            </value>
            <value>
                <fullName>Other/Education</fullName>
            </value>
            <value>
                <fullName>Professor/Doctorate</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Teaching Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>