force-app/main/default/objects/Contact/fields/Position_Farming_Fishing_Forestry__c.field-meta.xml
<CustomField>
    <fullName>Position_Farming_Fishing_Forestry__c</fullName>
    <description>Online App</description>
    <label>Position - Farming Fishing Forestry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Equipment Operator</fullName>
            </value>
            <value>
                <fullName>Agricultural Inspector</fullName>
            </value>
            <value>
                <fullName>Animal Breeder</fullName>
            </value>
            <value>
                <fullName>Farm Labor Contractor</fullName>
            </value>
            <value>
                <fullName>Farm Worker &amp; Laborer</fullName>
            </value>
            <value>
                <fullName>Farmer &amp; Rancher</fullName>
            </value>
            <value>
                <fullName>Fisherman &amp; Related Worker</fullName>
            </value>
            <value>
                <fullName>Food Inspector</fullName>
            </value>
            <value>
                <fullName>Forest &amp; Conservation Worker</fullName>
            </value>
            <value>
                <fullName>Grader &amp; Sorter-Agricultural Products</fullName>
            </value>
            <value>
                <fullName>Hunter &amp; Trapper</fullName>
            </value>
            <value>
                <fullName>Logger</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Supervisor/Manager-Farming,Fishing,Forestry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>