force-app/main/default/objects/Contact/fields/Position_Food_Service_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Position_Food_Service_Preparation__c</fullName>
    <description>Online Application</description>
    <label>Position - Food Service Preparation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar Owner/Partner</fullName>
            </value>
            <value>
                <fullName>Barista &amp; Coffee Maker</fullName>
            </value>
            <value>
                <fullName>Bartenders</fullName>
            </value>
            <value>
                <fullName>Beer, Wine, Liquor Store Owner</fullName>
            </value>
            <value>
                <fullName>Cafeteria &amp; Coffee Shop Attendant</fullName>
            </value>
            <value>
                <fullName>Chefs &amp; Head Cooks</fullName>
            </value>
            <value>
                <fullName>Convenience Store Owner</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Food Preparer &amp; Server</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Host &amp; Hostess</fullName>
            </value>
            <value>
                <fullName>Other Food Service Owner/Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Restaurant Owner/Partner</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Supervisor &amp; Manager</fullName>
            </value>
            <value>
                <fullName>Waiter &amp; Waitress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>