force-app/main/default/objects/Contact/fields/Position_Healthcare_Practitioners__c.field-meta.xml
<CustomField>
    <fullName>Position_Healthcare_Practitioners__c</fullName>
    <description>Online App</description>
    <label>Position - Healthcare Practitioners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
            <value>
                <fullName>Athletic Trainer</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Tech</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Dental Hygienist</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Diagnosing &amp; Treatment-All Other</fullName>
            </value>
            <value>
                <fullName>Diagnostic Medical Sonographer</fullName>
            </value>
            <value>
                <fullName>Dietitian &amp; Nutritionist</fullName>
            </value>
            <value>
                <fullName>Emergency Medical Tech &amp; Paramedic</fullName>
            </value>
            <value>
                <fullName>Health Tech - All Other</fullName>
            </value>
            <value>
                <fullName>Laboratory Technician</fullName>
            </value>
            <value>
                <fullName>Medical Records Technician</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine Technologist</fullName>
            </value>
            <value>
                <fullName>Nurse - Licensed</fullName>
            </value>
            <value>
                <fullName>Nurse - Registered</fullName>
            </value>
            <value>
                <fullName>Occupational Health &amp; Safety Technician</fullName>
            </value>
            <value>
                <fullName>Optician - Dispensing</fullName>
            </value>
            <value>
                <fullName>Oral Surgeon</fullName>
            </value>
            <value>
                <fullName>Orthodontist &amp; Prosthodontist</fullName>
            </value>
            <value>
                <fullName>Orthotics &amp; Prosthetics</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Physician/Surgeon</fullName>
            </value>
            <value>
                <fullName>Practitioner/Tech - All Other</fullName>
            </value>
            <value>
                <fullName>Psychiatric Technician</fullName>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
            </value>
            <value>
                <fullName>Radiology Tech</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapy Technician</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>