force-app/main/default/objects/Contact/fields/Position_Healthcare_Support_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Position_Healthcare_Support_Occupation__c</fullName>
    <description>Online App</description>
    <label>Position - Healthcare Support Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNA Certified Nursing Assist</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>Healthcare Support - All Other</fullName>
            </value>
            <value>
                <fullName>Home Health Aide</fullName>
            </value>
            <value>
                <fullName>Laboratory Animal Caretaker</fullName>
            </value>
            <value>
                <fullName>Massage Therapist</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Medical Equipment Preparer</fullName>
            </value>
            <value>
                <fullName>Medical Transcriptions</fullName>
            </value>
            <value>
                <fullName>Nursing Aide/Orderly/Attendant</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist Assistant</fullName>
            </value>
            <value>
                <fullName>Pharmacy Aide</fullName>
            </value>
            <value>
                <fullName>Physical Therapist Assistant</fullName>
            </value>
            <value>
                <fullName>Psychiatric Aide</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Veterinary Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>