force-app/main/default/objects/Contact/fields/Position_Installation_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Position_Installation_Maintenance__c</fullName>
    <description>Online App</description>
    <label>Position - Installation Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft Mechanic &amp; Service Technician</fullName>
            </value>
            <value>
                <fullName>Automated Teller Machine Repairer</fullName>
            </value>
            <value>
                <fullName>Automotive/RV Technician</fullName>
            </value>
            <value>
                <fullName>Avionics Technician</fullName>
            </value>
            <value>
                <fullName>Bicycle Repairer</fullName>
            </value>
            <value>
                <fullName>Bus &amp; Trucks Mechanic</fullName>
            </value>
            <value>
                <fullName>Camera &amp; Photographic Equipment Repair</fullName>
            </value>
            <value>
                <fullName>Coin Vending, Amusement Machine Repairer</fullName>
            </value>
            <value>
                <fullName>Commercial Diver</fullName>
            </value>
            <value>
                <fullName>Computer Office Machine Repairer</fullName>
            </value>
            <value>
                <fullName>Control Valve Installer &amp; Repairer</fullName>
            </value>
            <value>
                <fullName>Diesel Engine Specialist</fullName>
            </value>
            <value>
                <fullName>Electric Power Tool Repairer</fullName>
            </value>
            <value>
                <fullName>Electrical Repair &amp; Installer</fullName>
            </value>
            <value>
                <fullName>Fabric Mender</fullName>
            </value>
            <value>
                <fullName>Heat &amp; Air Condition Mechanic/Installer</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment Mechanic</fullName>
            </value>
            <value>
                <fullName>Helper of Repairer Workers</fullName>
            </value>
            <value>
                <fullName>Home Appliance Repairer</fullName>
            </value>
            <value>
                <fullName>Home Entertainment Equipment Repairer</fullName>
            </value>
            <value>
                <fullName>Industrial Machinery Mechanic</fullName>
            </value>
            <value>
                <fullName>Instrument Repair-All Other</fullName>
            </value>
            <value>
                <fullName>Line Installer &amp; Repairer</fullName>
            </value>
            <value>
                <fullName>Locksmith &amp; Safe Repairer</fullName>
            </value>
            <value>
                <fullName>Maintenance Worker</fullName>
            </value>
            <value>
                <fullName>Manufactured Mobile Home Installer</fullName>
            </value>
            <value>
                <fullName>Mechanical Door Repairer</fullName>
            </value>
            <value>
                <fullName>Medical Equipment Repairer</fullName>
            </value>
            <value>
                <fullName>Millwright</fullName>
            </value>
            <value>
                <fullName>Musical Instrument Repairer &amp; Tuner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>