force-app/main/default/objects/Contact/fields/Position_Legal_Occupations__c.field-meta.xml
<CustomField>
    <fullName>Position_Legal_Occupations__c</fullName>
    <description>Online App</description>
    <label>Position - Legal Occupations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjudicator</fullName>
            </value>
            <value>
                <fullName>Arbitrator/Mediator</fullName>
            </value>
            <value>
                <fullName>Court Reporter</fullName>
            </value>
            <value>
                <fullName>Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Judge/Magistrate</fullName>
            </value>
            <value>
                <fullName>Law Clerk</fullName>
            </value>
            <value>
                <fullName>Law Teacher</fullName>
            </value>
            <value>
                <fullName>Lawyer/Attorney</fullName>
            </value>
            <value>
                <fullName>Legal Support Worker</fullName>
            </value>
            <value>
                <fullName>Manager, Legal Department</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner / Partner</fullName>
            </value>
            <value>
                <fullName>Paralegal/Legal Assistant</fullName>
            </value>
            <value>
                <fullName>Public Defender/Prosecutor</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Title Examiner/Searcher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>