force-app/main/default/objects/Contact/fields/Position_Life_Physical_and_Social_Scie__c.field-meta.xml
<CustomField>
    <fullName>Position_Life_Physical_and_Social_Scie__c</fullName>
    <description>Online App</description>
    <label>Position - Life Physical and Social Scie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural &amp; Food Science Tech</fullName>
            </value>
            <value>
                <fullName>Animal Scientist</fullName>
            </value>
            <value>
                <fullName>Anthropologist &amp; Archeologist</fullName>
            </value>
            <value>
                <fullName>Astronomer</fullName>
            </value>
            <value>
                <fullName>Atmospheric &amp; Space Scientist</fullName>
            </value>
            <value>
                <fullName>Biochemist/Biophysicist</fullName>
            </value>
            <value>
                <fullName>Biological Scientist-All Other</fullName>
            </value>
            <value>
                <fullName>Biological Technician</fullName>
            </value>
            <value>
                <fullName>Chemical Technician</fullName>
            </value>
            <value>
                <fullName>Chemist</fullName>
            </value>
            <value>
                <fullName>Clinical, Counsel &amp; School Psychologist</fullName>
            </value>
            <value>
                <fullName>Conservation Scientist</fullName>
            </value>
            <value>
                <fullName>Economist</fullName>
            </value>
            <value>
                <fullName>Environmental Health Scientist</fullName>
            </value>
            <value>
                <fullName>Environmental Science &amp; Protection Tech</fullName>
            </value>
            <value>
                <fullName>Environmental Scientist &amp; Specialist</fullName>
            </value>
            <value>
                <fullName>Forensic Science Technician</fullName>
            </value>
            <value>
                <fullName>Forest &amp; Conservation Tech</fullName>
            </value>
            <value>
                <fullName>Forester</fullName>
            </value>
            <value>
                <fullName>Geographer</fullName>
            </value>
            <value>
                <fullName>Geological &amp; Petroleum Tech</fullName>
            </value>
            <value>
                <fullName>Geoscientist</fullName>
            </value>
            <value>
                <fullName>Historian</fullName>
            </value>
            <value>
                <fullName>Hydrologist</fullName>
            </value>
            <value>
                <fullName>Industrial-Organizational Psychologist</fullName>
            </value>
            <value>
                <fullName>Market Research Analyst</fullName>
            </value>
            <value>
                <fullName>Materials Scientist</fullName>
            </value>
            <value>
                <fullName>Medical Scientist</fullName>
            </value>
            <value>
                <fullName>Microbiologist</fullName>
            </value>
            <value>
                <fullName>Nuclear Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>