force-app/main/default/objects/Contact/fields/Position_Management__c.field-meta.xml
<CustomField>
    <fullName>Position_Management__c</fullName>
    <description>Online App</description>
    <label>Position - Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Member/Commissioner</fullName>
            </value>
            <value>
                <fullName>Chief Executive/President</fullName>
            </value>
            <value>
                <fullName>Computer/Info Services Mgr</fullName>
            </value>
            <value>
                <fullName>Construction Manager</fullName>
            </value>
            <value>
                <fullName>Education Administrator</fullName>
            </value>
            <value>
                <fullName>Engineering Manager</fullName>
            </value>
            <value>
                <fullName>Farmer/Rancher</fullName>
            </value>
            <value>
                <fullName>Financial Manager/Officer</fullName>
            </value>
            <value>
                <fullName>Funeral Director</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Hospitality Management</fullName>
            </value>
            <value>
                <fullName>Information Systems Manager</fullName>
            </value>
            <value>
                <fullName>Legislator</fullName>
            </value>
            <value>
                <fullName>Marketing/PR/Adv Manager</fullName>
            </value>
            <value>
                <fullName>Medical/Health Services Manager</fullName>
            </value>
            <value>
                <fullName>Natural Sciences Manager</fullName>
            </value>
            <value>
                <fullName>Postmaster/Mail Superintendent</fullName>
            </value>
            <value>
                <fullName>Production Manager</fullName>
            </value>
            <value>
                <fullName>Property/Real Estate Manager</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Sales/Store/General Manager</fullName>
            </value>
            <value>
                <fullName>Social/Community Service Manager</fullName>
            </value>
            <value>
                <fullName>Transportation/Dist Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>