force-app/main/default/objects/Contact/fields/Position_Not_Employed__c.field-meta.xml
<CustomField>
    <fullName>Position_Not_Employed__c</fullName>
    <description>Online App</description>
    <label>Position - Not Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>