force-app/main/default/objects/Contact/fields/Position_Office_and_Admin__c.field-meta.xml
<CustomField>
    <fullName>Position_Office_and_Admin__c</fullName>
    <description>Online App</description>
    <label>Position - Office and Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Bookkeeping,Accounting,Auditing Clerk</fullName>
            </value>
            <value>
                <fullName>Cargo &amp; Freight Agent</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Communication Equip-All Other</fullName>
            </value>
            <value>
                <fullName>Computer Operator</fullName>
            </value>
            <value>
                <fullName>Courier &amp; Messenger</fullName>
            </value>
            <value>
                <fullName>Customer Service Rep</fullName>
            </value>
            <value>
                <fullName>Data Entry Keyer</fullName>
            </value>
            <value>
                <fullName>Desktop Publisher</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Exec Secretary &amp; Admin Assist</fullName>
            </value>
            <value>
                <fullName>Gaming Cage Worker</fullName>
            </value>
            <value>
                <fullName>Government Program Eligibility Interviewer</fullName>
            </value>
            <value>
                <fullName>Hotel, Motel &amp; Resort Owner</fullName>
            </value>
            <value>
                <fullName>Human Resource Assistant</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
            <value>
                <fullName>Interviewer</fullName>
            </value>
            <value>
                <fullName>Investigator</fullName>
            </value>
            <value>
                <fullName>Legal Secretary</fullName>
            </value>
            <value>
                <fullName>Library Assistant - Clerical</fullName>
            </value>
            <value>
                <fullName>Machine Operator</fullName>
            </value>
            <value>
                <fullName>Mail Machine Operator-All Other</fullName>
            </value>
            <value>
                <fullName>Medical Secretary</fullName>
            </value>
            <value>
                <fullName>Meter Reader - Utility</fullName>
            </value>
            <value>
                <fullName>Office &amp; Admin Support-All Other</fullName>
            </value>
            <value>
                <fullName>Postal Service Mail Carrier</fullName>
            </value>
            <value>
                <fullName>Postal Service Processor</fullName>
            </value>
            <value>
                <fullName>Proofreader &amp; Copy Marker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>