force-app/main/default/objects/Contact/fields/Position_Personal_Care_and_Service__c.field-meta.xml
<CustomField>
    <fullName>Position_Personal_Care_and_Service__c</fullName>
    <description>Online App</description>
    <label>Position - Personal Care and Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amusement Park/Arcade Attend</fullName>
            </value>
            <value>
                <fullName>Amusement Park/Arcade Owner</fullName>
            </value>
            <value>
                <fullName>Animal Caretaker/Trainer</fullName>
            </value>
            <value>
                <fullName>Barber/Hairdresser/Stylist</fullName>
            </value>
            <value>
                <fullName>Car Wash Attendants</fullName>
            </value>
            <value>
                <fullName>Car Wash Owner</fullName>
            </value>
            <value>
                <fullName>Child Care Workers</fullName>
            </value>
            <value>
                <fullName>Coat/Dressing Room Attendant</fullName>
            </value>
            <value>
                <fullName>Concierge, Baggage Porter &amp; Bellhop</fullName>
            </value>
            <value>
                <fullName>Cosmetologist</fullName>
            </value>
            <value>
                <fullName>Costume Attendants</fullName>
            </value>
            <value>
                <fullName>Fitness Trainer/Instructor</fullName>
            </value>
            <value>
                <fullName>Flight/Transportation Attendant</fullName>
            </value>
            <value>
                <fullName>Flight/Transportation School Owner</fullName>
            </value>
            <value>
                <fullName>Funeral Attendants/Embalmers</fullName>
            </value>
            <value>
                <fullName>Gambler</fullName>
            </value>
            <value>
                <fullName>Gaming - Supervisors/Managers</fullName>
            </value>
            <value>
                <fullName>Gaming Dealers</fullName>
            </value>
            <value>
                <fullName>Gaming Service Worker-All Other</fullName>
            </value>
            <value>
                <fullName>Gaming &amp; Sports Book Writer &amp; Runner</fullName>
            </value>
            <value>
                <fullName>Gaming Establishment Owner/Partner</fullName>
            </value>
            <value>
                <fullName>Golf Course/Country Club Owner</fullName>
            </value>
            <value>
                <fullName>Golf Course/Country Club Attendant</fullName>
            </value>
            <value>
                <fullName>Manicurist/Skin Specialist</fullName>
            </value>
            <value>
                <fullName>Motion Picture Projectionists</fullName>
            </value>
            <value>
                <fullName>Owner/Service Provider</fullName>
            </value>
            <value>
                <fullName>Personal &amp; Home Care Aides</fullName>
            </value>
            <value>
                <fullName>Personal Care - All Other</fullName>
            </value>
            <value>
                <fullName>Residential Advisor/Supervisor</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>